# sub-interpreter-demo

./: CMakeLists.txt  README.md  a1main_multithread.cpp  a2multithreads.cpp  a3multithreads_class.cpp  a4main_multithread_state.cpp  example.cpp  example2.cpp  multiproces.py  test.py
